--- a/memory_rl/conf/environment/bsuite_umbrella_chain.yaml
+++ b/memory_rl/conf/environment/bsuite_umbrella_chain.yaml
@@ -1,5 +1,6 @@
-_target_: memory_rl.environments.gymnax.make
+namespace: gymnax
 env_id: UmbrellaChain-bsuite
+kwargs:
 
 env_params:
   chain_length: 10
