--- a/memory_rl/conf/environment/craftax_pixels.yaml
+++ b/memory_rl/conf/environment/craftax_pixels.yaml
@@ -1,5 +1,5 @@
-_target_: memory_rl.environments.craftax.make
+namespace: craftax
 env_id: Craftax-Pixels-v1
-
-wrappers:
- - _target_: gymnax.wrappers.FlattenObservationWrapper
+kwargs:
+  auto_reset: True
+flatten_obs: True
