--- a/memory_rl/conf/environment/popgym_arcade_autoencode.yaml
+++ b/memory_rl/conf/environment/popgym_arcade_autoencode.yaml
@@ -1,3 +1,4 @@
-_target_: memory_rl.environments.popgym_arcade.make
+namespace: popgym_arcade
 env_id: AutoEncodeEasy
-partial_obs: True
+kwargs:
+  partial_obs: True
