--- a/memory_rl/conf/environment/minatar_breakout.yaml
+++ b/memory_rl/conf/environment/minatar_breakout.yaml
@@ -1,5 +1,5 @@
-_target_: memory_rl.environments.gymnax.make
+namespace: gymnax
 env_id: Breakout-MinAtar
+kwargs:
+flatten_obs: True
 
-wrappers:
- - _target_: gymnax.wrappers.FlattenObservationWrapper
