--- a/memory_rl/conf/environment/minatar_freeway.yaml
+++ b/memory_rl/conf/environment/minatar_freeway.yaml
@@ -1,5 +1,4 @@
-_target_: memory_rl.environments.gymnax.make
+namespace: gymnax
 env_id: Freeway-MinAtar
-
-wrappers:
- - _target_: gymnax.wrappers.FlattenObservationWrapper
+kwargs:
+flatten_obs: True
