--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,7 @@ requires = ["setuptools>=64", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages   = ["memory_rl", "popjaxrl", "tests"]
-py-modules = ["main", "sweep"] 
+packages   = ["memory_rl", "tests"]
 
 [project]
 name = "memory-rl"
@@ -19,38 +18,21 @@ dependencies = [
     "flashbax>=0.1.3",
     "flax>=0.10.7",
     "gymnax>=0.0.9",
-    "hydra-core>=1.3.2",
-    "hydra-submitit-launcher>=1.2.0",
     "jumanji>=1.1.1",
     "navix>=0.7.0",
-    "omegaconf>=2.3.0",
     "wandb>=0.21.0",
-    "hydra-joblib-launcher>=1.2.0",
-    "pobax>=0.0.1",
     "craftax>=1.5.0",
-    "tqdx>=0.1.3",
-    "orbax>=0.1.9",
-    "pgx>=2.6.0",
     "gxm",
-    "rliable",
-    "optuna>=2.10.1",
-    "optuna-integration>=4.5.0",
-    "hydra-optuna-sweeper>=1.2.0",
     "playground>=0.0.5",
-    "neptune-scale>=0.27.0",
     "tensorboard>=2.20.0",
     "popgym-arcade>=0.0.4",
-    "uniplot>=0.21.4",
     "warp-lang>=1.9.1",
+    "popjym",
+    "neptune-scale>=0.27.0",
 ]
 
 [project.optional-dependencies]
-cuda = ["jax[cuda12]", "envpool"]
-
-
-[project.scripts]
-main = "main:main"
-sweep = "sweep:main"
+cuda = ["jax[cuda12]"]
 
 [dependency-groups]
 commit = [
@@ -62,5 +44,5 @@ package = true
 
 [tool.uv.sources]
 gxm = { git = "https://github.com/huterguier/gxm", rev = "dev" }
-rliable = { git = "https://github.com/google-research/rliable" }
+popjym = { git = "https://github.com/EdanToledo/popjym.git" }
 
