--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ all = [
 cuda = ["jax[cuda12]>=0.7.2"]
 
 [dependency-groups]
-commit = ["pre-commit>=4.2.0"]
+development = ["pre-commit>=4.2.0", "pytest"]
 
 [tool.uv]
 package = true
