--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ popgym-arcade    = ["popgym-arcade>=0.0.4"]
 playground= ["playground>=0.0.5", "warp-lang>=1.9.1"]
 gxm       = ["gxm"]
 popjym    = ["popjym"]
+xminigrid = ["xminigrid"]
 
 all = [
     "brax>=0.12.4",
