--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ gxm       = ["gxm"]
 popjym    = ["popjym"]
 xminigrid = ["xminigrid"]
 jaxmarl   = ["jaxmarl", "brax"]
-mettagrid = ["mettagrid", "torch", "pufferlib-core", "boto3"]
+mettagrid = ["mettagrid", "torch", "pufferlib-core", "boto3", "cogames; python_version >= '3.12' and python_version < '3.13'"]
 
 environments = [
     "brax>=0.12.4",
@@ -75,6 +75,11 @@ requires-dist = []
 name = "mettagrid"
 requires-dist = []
 
+[[tool.uv.dependency-metadata]]
+name = "cogames"
+requires-dist = []
+
 [tool.uv.sources]
-gxm    = { git = "https://github.com/huterguier/gxm", rev = "dev", extra = "gxm" }
-popjym = { git = "https://github.com/EdanToledo/popjym.git",            extra = "popjym" }
+gxm     = { git = "https://github.com/huterguier/gxm", rev = "dev", extra = "gxm" }
+popjym  = { git = "https://github.com/EdanToledo/popjym.git", extra = "popjym" }
+cogames = { git = "ssh://git@github.com/Metta-AI/metta.git", subdirectory = "packages/cogames", extra = "mettagrid" }
